# Rzler

./: README.md  main.py  pyproject.toml  requirements.txt  start.sh
data/smpl_models/: smpl_kid_template.npy
docs/: api_architecture.md  api_usage.md  index.md  installation.md
src/romp_pipeline/: __init__.py
src/romp_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/romp_pipeline/api/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
src/romp_pipeline/api/models/: schemas.py
src/romp_pipeline/api/routers/: health.py  measurement.py
src/romp_pipeline/api/services/: image_service.py  measurement_service.py  romp_service.py
src/romp_pipeline/config/: __init__.py  settings.py
src/romp_pipeline/core/: __init__.py  joint_definitions.py  landmark_definitions.py  measure.py  measurement_definitions.py  utils.py
