[build-system]
requires = ["setuptools>=65.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "romp-pipeline"
version = "1.0.0"
description = "Body measurement pipeline using ROMP and SMPL models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ROMP Pipeline Team"}
]
keywords = ["romp", "smpl", "body-measurement", "3d-reconstruction", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.19.0,<2.0.0",
    "torch>=1.10.0",
    "trimesh>=3.9.0",
    "smplx>=0.1.28",
    "simple-romp>=1.0.0",
    "opencv-python-headless>=4.5.0",
    "pillow>=8.0.0",
    "scipy>=1.5.0",
    "tqdm>=4.50.0",
    "requests>=2.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "chumpy",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
romp-api = "romp_pipeline.api.main:run_server"

[project.urls]
Homepage = "https://github.com/yourusername/romp-pipeline"
Documentation = "https://github.com/yourusername/romp-pipeline#readme"
Repository = "https://github.com/yourusername/romp-pipeline"
Issues = "https://github.com/yourusername/romp-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
romp_pipeline = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=romp_pipeline --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
